--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 /* *{
     margin: 0;
@@ -9,9 +11,14 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlight{
-    color: #ff69b4;
+h2{
     font-size: 40px;
+}
+p{
+    color: rgb(123, 123, 123);
+}
+.hotpink-highlight{
+    color: #ff69b4;
 }
 .half-width{
     width: 40%;
@@ -21,4 +28,63 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url("../images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 600px;
+    padding-bottom: 150px;
+}
+.link-btn{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    color: #fff;
+    padding: 12px 30px;
+    font-weight: 700;
+    border-radius: 5px;
+}
+/* .top-button{ */
+    /* text-decoration: none; */
+    /* font-size: 14px; */
+    /* font-weight: 700; */
+    /* color: white; */
+    /* background-image: linear-gradient(45deg, lightsalmon, tomato); */
+    /* padding: 14px 40px; */
+    /* border-radius: 5px; */
+/* } */
+.extra-space{
+    margin-top: 120px;
+}
+.dream-bg{
+    background-image: url("../images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 80%;
+    background-color: #ffffff;
+}
+.exprience-bg{
+    background-image: url("../images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p{
+    text-align: center;
+    font-size: 14px;
 }
